// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardsContainer should  not make any cards if array is empty 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CardsContainer
    cards={Array []}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [],
      "className": "CardsContainer",
    },
    "ref": null,
    "rendered": Array [],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [],
        "className": "CardsContainer",
      },
      "ref": null,
      "rendered": Array [],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`CardsContainer should create 2 cards 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CardsContainer
    cards={
        Array [
            Object {
              "homeWorldName": "Tatooine",
              "name": "Luke Skywalker",
              "population": "200000",
              "species": "Human",
            },
            Object {
              "homeWorldName": "Tatooine",
              "name": "C-3PO",
              "population": "200000",
              "species": "Droid",
            },
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Card
          card={
                    Object {
                              "homeWorldName": "Tatooine",
                              "name": "Luke Skywalker",
                              "population": "200000",
                              "species": "Human",
                            }
          }
          homeWorldName="Tatooine"
          name="Luke Skywalker"
          population="200000"
          species="Human"
          toggleFavorites={undefined}
/>,
        <Card
          card={
                    Object {
                              "homeWorldName": "Tatooine",
                              "name": "C-3PO",
                              "population": "200000",
                              "species": "Droid",
                            }
          }
          homeWorldName="Tatooine"
          name="C-3PO"
          population="200000"
          species="Droid"
          toggleFavorites={undefined}
/>,
      ],
      "className": "CardsContainer",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "Luke Skywalker0",
        "nodeType": "function",
        "props": Object {
          "card": Object {
            "homeWorldName": "Tatooine",
            "name": "Luke Skywalker",
            "population": "200000",
            "species": "Human",
          },
          "homeWorldName": "Tatooine",
          "name": "Luke Skywalker",
          "population": "200000",
          "species": "Human",
          "toggleFavorites": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "C-3PO1",
        "nodeType": "function",
        "props": Object {
          "card": Object {
            "homeWorldName": "Tatooine",
            "name": "C-3PO",
            "population": "200000",
            "species": "Droid",
          },
          "homeWorldName": "Tatooine",
          "name": "C-3PO",
          "population": "200000",
          "species": "Droid",
          "toggleFavorites": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Card
            card={
                        Object {
                                    "homeWorldName": "Tatooine",
                                    "name": "Luke Skywalker",
                                    "population": "200000",
                                    "species": "Human",
                                  }
            }
            homeWorldName="Tatooine"
            name="Luke Skywalker"
            population="200000"
            species="Human"
            toggleFavorites={undefined}
/>,
          <Card
            card={
                        Object {
                                    "homeWorldName": "Tatooine",
                                    "name": "C-3PO",
                                    "population": "200000",
                                    "species": "Droid",
                                  }
            }
            homeWorldName="Tatooine"
            name="C-3PO"
            population="200000"
            species="Droid"
            toggleFavorites={undefined}
/>,
        ],
        "className": "CardsContainer",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "Luke Skywalker0",
          "nodeType": "function",
          "props": Object {
            "card": Object {
              "homeWorldName": "Tatooine",
              "name": "Luke Skywalker",
              "population": "200000",
              "species": "Human",
            },
            "homeWorldName": "Tatooine",
            "name": "Luke Skywalker",
            "population": "200000",
            "species": "Human",
            "toggleFavorites": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "C-3PO1",
          "nodeType": "function",
          "props": Object {
            "card": Object {
              "homeWorldName": "Tatooine",
              "name": "C-3PO",
              "population": "200000",
              "species": "Droid",
            },
            "homeWorldName": "Tatooine",
            "name": "C-3PO",
            "population": "200000",
            "species": "Droid",
            "toggleFavorites": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
